--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,10 @@ body {
     text-align: center;
 }
 
+h1 {
+    margin-bottom: 35px;
+}
+
 span {
     border-bottom: 2px solid black;
     padding: 4px;
